--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,10 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: Install MAUI Android workload
-      run: dotnet workload install maui-android
-    - name: Install MAUI IOS workload
-      run: dotnet workload install Microsoft.ios.Sdk.net8
+    - name: Install MAUI workload
+      run: dotnet workload install maui-android maui-ios
     - name: Restore dependencies
       run: dotnet restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Build
