--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Install MAUI workload
-      run: dotnet workload install maui-android maui-ios
+      run: dotnet workload install maui-android
     - name: Restore dependencies
       run: dotnet restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Build
