--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: Install MAUI workload
-      run: dotnet workload install maui-android
+    - name: Restore workload
+      run: dotnet workload restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Restore dependencies
       run: dotnet restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Build
