--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Install MAUI workload
-      run: dotnet workload install android ios
+      run: dotnet workload install android ios maccatalyst
     - name: Restore dependencies
       run: dotnet restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Build
