--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Install MAUI workload
+      run: dotnet workload install android ios maccatalyst
     - name: Restore dependencies
       run: dotnet restore ./FilesSafeReserve/FilesSafeReserve.sln
     - name: Build
