--- a/FilesSafeReserve/FilesSafeReserve/FilesSafeReserve.csproj
+++ b/FilesSafeReserve/FilesSafeReserve/FilesSafeReserve.csproj
@@ -66,6 +66,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazor.Bootstrap" Version="2.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
           <PrivateAssets>all</PrivateAssets>
