--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,11 @@ name: .NET
 
 on:
   workflow_dispatch:
-
+  push:
+    branches: [ "development" ]
+  pull_request:
+    branches: [ "development" ]
+    
 jobs:
   build:
 
