--- a/FilesSafeReserve/FilesSafeReserve/FilesSafeReserve.csproj
+++ b/FilesSafeReserve/FilesSafeReserve/FilesSafeReserve.csproj
@@ -67,6 +67,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazor.Bootstrap" Version="2.1.0" />
+        <PackageReference Include="CommunityToolkit.Maui.Core" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
           <PrivateAssets>all</PrivateAssets>
@@ -77,11 +78,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.7" />
-        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.7" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.20" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     </ItemGroup>
 
     <ItemGroup>
