--- a/src/FilesSafeReserve.Services/FilesSafeReserve.Services.csproj
+++ b/src/FilesSafeReserve.Services/FilesSafeReserve.Services.csproj
@@ -10,4 +10,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FilesSafeReserve.App\FilesSafeReserve.App.csproj" />
+    <ProjectReference Include="..\FilesSafeReserve.Domain\FilesSafeReserve.Domain.csproj" />
+    <ProjectReference Include="..\FilesSafeReserve.Infra\FilesSafeReserve.Infra.csproj" />
+  </ItemGroup>
 </Project>
