DEV-007: Implementing smartphone files backup
"src" folder changes
* Added service interface ISmartphoneService
* Added service SmartphoneService that implements ISmartphoneService
* Created viewmodel SmartphoneViewModel for page SmartphonePage
* Updated page SmartphonePage

--- a/src/FilesSafeReserve.App/FilesSafeReserve.App.csproj
+++ b/src/FilesSafeReserve.App/FilesSafeReserve.App.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediaDevices" Version="1.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FilesSafeReserve.Domain\FilesSafeReserve.Domain.csproj" />
   </ItemGroup>
 
