--- a/src/FilesSafeReserve.UI/FilesSafeReserve.UI.csproj
+++ b/src/FilesSafeReserve.UI/FilesSafeReserve.UI.csproj
@@ -60,6 +60,7 @@
     <ItemGroup>
         <PackageReference Include="Blazor.Bootstrap" Version="2.2.1" />
         <PackageReference Include="CommunityToolkit.Maui.Core" Version="8.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.5" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.21" />
